--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
+# Database Connection Parameters
 spring.datasource.url=jdbc:postgresql://localhost:5432/kanbandb
 spring.datasource.username=postgres
 spring.datasource.password=123
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+
+# Path to SQL migration scripts
+spring.flyway.locations=classpath:db/migration
