--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,11 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-security</artifactId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
+      <version>3.0.4</version>
     </dependency>
 
     <dependency>
