--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Path to SQL migration scripts
 spring.flyway.locations=classpath:db/migration
+server.error.whitelabel.enabled=false
