добавлено логирование и исправлены баги

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.properties.hibernate.format_sql=true
 # Path to SQL migration scripts
 spring.flyway.locations=classpath:db/migration
 server.error.whitelabel.enabled=false
+
+logging.level.web=trace
+logging.level.org.springframework.web.method.annotation=ERROR
