--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,11 @@
       <artifactId>xml-apis</artifactId>
       <version>2.0.2</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>2.0.7</version>
+    </dependency>
   </dependencies>
 
   <build>
